fix border of item-links not showing for recipes in recipeTable

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -710,6 +710,7 @@ ul.ingredients {
         font-size: 12px;
         position: absolute;
         bottom: 8px; left: 32px; right: 8px;
+        padding-bottom: 2px;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
